<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/b"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/tvTittle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:text="@string/multiplication"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="48sp" />


            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp">

                <view
                    android:id="@+id/tvIntro"
                    class="androidx.appcompat.widget.AppCompatTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/yellowBkg"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/do_you_know_that_the_multiplication_process_is_a_repeated_summation_processes_n_5_x_3_5_x_5_x_5"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tvExp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="140dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="50dp"
                    android:text="@string/_5_x_3_5_x_5_x_5"
                    android:textColor="@color/purple_700"
                    android:textSize="24sp"
                    android:textStyle="bold|italic" />

                <view
                    android:id="@+id/VExplain"
                    class="androidx.appcompat.widget.AppCompatTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="190dp"
                    android:background="@color/yellowBkg"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/explainingAdding"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="normal" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CV1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvPractice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:text="@string/now_let_s_practice_it"
                    android:textColor="@color/purple_700"
                    android:textSize="22sp"
                    android:textStyle="bold|italic" />

                <Button
                    android:id="@+id/btnGo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="60dp"
                    android:background="@color/purple_700"
                    android:text="@string/go" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/CV2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:background="@color/whiteBkg"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tvHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/answer_the_question_by_clicking_on_the_circle_beside_the_right_answer"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvQuestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="65dp"
                        android:layout_marginBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:text="@string/which_one_equals_2_x_4"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <RadioGroup
                        android:id="@+id/Radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="90dp">

                        <RadioButton
                            android:id="@+id/radioButton3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_2_2_2"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/RBchoice2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_2_2_2_2"
                            android:textSize="16sp" />
                    </RadioGroup>
                    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <!-- Your other views -->

                        <TextView
                            android:id="@+id/dialog_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Dialog Title"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                        <TextView
                            android:id="@+id/dialog_message"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/dialog_title"
                            android:text="Dialog message"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                        <Button
                            android:id="@+id/dialog_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/dialog_message"
                            android:text="OK" />

                    </RelativeLayout>


                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>